--- a/index.html
+++ b/index.html
@@ -1,14 +1,57 @@
 <!DOCTYPE html>
+<html lang="pt-BR">
 
 <head>
-    <title>hummm</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/sla.css">
+    <link rel="stylesheet" href="css/class.css">
+    <title>Meu Repositório</title>
 </head>
+    
+<body class="corpo">
+    <h1 class="title">{ Hello Word }</h1>
+    <header class="cabeçalho">
+        <li><a href="/">Home</a></li>
+        <nav>
+            <ul class="menu">
+                <li><a href="/html/produtos.html">Produtos</a></li>
+                <li><a href="/html/midia.html">Mídia</a></li>
+                <li><a href="/html/contato.html">Contatos</a></li>
+                <li><a href="/html/sobre.html">Sobre</a></li>
+            </ul>
+        </nav>
+    </header>
 
-<body class="bak">
-    <h1 class="title">So um teste kkkk</h1>
-    <br>
-    <br>
-    <p>tu e bem gay ne men kkkkk ._.</p>
+    <h2 class="title">Projetos:</h2>
+
+    <div class="projeto1 taxtodireta">
+        <img src="/assets/p1.jpg" alt="projeto 1">
+        <ul>
+            <p>Nome:</p>
+            <strong>
+                <a href="https://github.com/Gabriel-bits/File_Organizer">File Organizer</a>
+            </strong>
+            <p>Descrição:</p>
+            <h5>"Projeto criado para organizar aquilo que nos mais incomoda..."</h5>
+        </ul>
+    </div>
+
+    <div class="projeto1 taxtosquerda">
+        <ul>
+            <p>Nome:</p>
+            <strong>
+                <a href="https://github.com/Gabriel-bits/Bot_Discord">Meu Bot do Discord</a>
+            </strong>
+            <p>Descrição:</p>
+            <h5>"Criado pra ser uma bom acompanhante, e bem humorado ..."</h5>
+        </ul>
+        <img src="/assets/p3.png" alt="projeto 1">
+    </div>
+
+    <h4 style="padding-left: 5px;">criador @Gabriel feito pra mobile</h4>
     
 </body>
+
+</html>
