--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/sla.css">
     <link rel="stylesheet" href="css/class.css">
+    <link rel="shortcut icon" href="/assets/p1.png" type="image/x-icon">
     <title>Meu Repositório</title>
 </head>
     
@@ -51,7 +52,7 @@
     </div>
 
     <h4 style="padding-left: 5px;">criador @Gabriel feito pra mobile</h4>
-    
+
 </body>
 
 </html>
