--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="import" href="">
     <link rel="stylesheet" href="css/sla.css">
     <link rel="stylesheet" href="css/class.css">
     <link rel="shortcut icon" href="/assets/p1.png" type="image/x-icon">
@@ -26,29 +27,32 @@
     </header>
 
     <h2 class="title">Projetos:</h2>
+    <div class="Projetos">
 
-    <div class="projeto1 taxtodireta">
-        <img src="/assets/p1.jpg" alt="projeto 1">
-        <ul>
-            <p>Nome:</p>
-            <strong>
-                <a href="https://github.com/Gabriel-bits/File_Organizer">File Organizer</a>
-            </strong>
-            <p>Descrição:</p>
-            <h5>"Projeto criado para organizar aquilo que nos mais incomoda..."</h5>
-        </ul>
-    </div>
+        <div class="projeto taxtodireta">
+            <img src="/assets/p1.jpg" alt="projeto 1">
+            <ul>
+                <p>Nome:</p>
+                <strong>
+                    <a href="https://github.com/Gabriel-bits/File_Organizer">File Organizer</a>
+                </strong>
+                <p>Descrição:</p>
+                <h5>"Projeto criado para organizar aquilo que nos mais incomoda..."</h5>
+            </ul>
+        </div>
+        
+        <div class="projeto taxtosquerda">
+            <ul>
+                <p>Nome:</p>
+                <strong>
+                    <a href="https://github.com/Gabriel-bits/Bot_Discord">Meu Bot do Discord</a>
+                </strong>
+                <p>Descrição:</p>
+                <h5>"Criado pra ser uma bom acompanhante, e bem humorado ..."</h5>
+            </ul>
+            <img src="/assets/p3.png" alt="projeto 1">
+        </div>
 
-    <div class="projeto1 taxtosquerda">
-        <ul>
-            <p>Nome:</p>
-            <strong>
-                <a href="https://github.com/Gabriel-bits/Bot_Discord">Meu Bot do Discord</a>
-            </strong>
-            <p>Descrição:</p>
-            <h5>"Criado pra ser uma bom acompanhante, e bem humorado ..."</h5>
-        </ul>
-        <img src="/assets/p3.png" alt="projeto 1">
     </div>
 
     <h4 style="padding-left: 5px;">criador @Gabriel feito pra mobile</h4>
