--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
         <li><a href="/">Home</a></li>
         <nav>
             <ul class="menu">
-                <li><a href="/html/produtos.html">Produtos</a></li>
-                <li><a href="/html/midia.html">Mídia</a></li>
-                <li><a href="/html/contato.html">Contatos</a></li>
-                <li><a href="/html/sobre.html">Sobre</a></li>
+                <li><a href="./html/produtos.html">Produtos</a></li>
+                <li><a href="./html/midia.html">Mídia</a></li>
+                <li><a href="./html/contato.html">Contatos</a></li>
+                <li><a href="./html/sobre.html">Sobre</a></li>
             </ul>
         </nav>
     </header>
