--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="import" href="">
-    <link rel="stylesheet" href="css/sla.css">
-    <!-- <link rel="stylesheet" href="css/class.css"> -->
+    <!-- <link rel="stylesheet" href="css/sla.css"> -->
+    <link rel="stylesheet" href="css/class.css">
     <link rel="shortcut icon" href="/assets/p1.png" type="image/x-icon">
     <title>Meu Repositório</title>
 </head>
