--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="import" href="">
     <!-- <link rel="stylesheet" href="css/sla.css"> -->
-    <link rel="stylesheet" href="css/class.css">
+    <link rel="stylesheet" href="./css/class.css">
     <link rel="shortcut icon" href="/assets/p1.png" type="image/x-icon">
     <title>Meu Repositório</title>
 </head>
