--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div class="Projetos">
 
         <div class="projeto taxtodireta">
-            <img src="/assets/p1.jpg" alt="projeto 1">
+            <img src="./assets/p1.jpg" alt="projeto 1">
             <ul>
                 <p>Nome:</p>
                 <strong>
@@ -50,7 +50,7 @@
                 <p>Descrição:</p>
                 <h5>"Criado pra ser uma bom acompanhante, e bem humorado ..."</h5>
             </ul>
-            <img src="/assets/p3.png" alt="projeto 1">
+            <img src="./assets/p3.png" alt="projeto 1">
         </div>
 
     </div>
