--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="import" href="">
     <!-- <link rel="stylesheet" href="css/sla.css"> -->
     <link rel="stylesheet" href="./css/class.css">
-    <link rel="shortcut icon" href="/assets/p1.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./assets/p1.png" type="image/x-icon">
     <title>Meu Repositório</title>
 </head>
     
