--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body class="corpo">
     <h1 class="title">{ Hello Word }</h1>
     <header class="cabeçalho">
-        <li><a href="/">Home</a></li>
+        <li><a href="./index.html">Home</a></li>
         <nav>
             <ul class="menu">
                 <li><a href="./html/produtos.html">Produtos</a></li>
@@ -54,6 +54,11 @@
         </div>
 
     </div>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
 
     <h4 style="padding-left: 5px;">criador @Gabriel feito pra mobile</h4>
 
