--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="import" href="">
-    <!-- <link rel="stylesheet" href="css/sla.css"> -->
+    <link rel="stylesheet" href="./css/header.css">
     <link rel="stylesheet" href="./css/class.css">
     <link rel="shortcut icon" href="./assets/p1.png" type="image/x-icon">
     <title>Meu Repositório</title>
@@ -27,10 +26,10 @@
     </header>
 
     <h2 class="title">Projetos:</h2>
-    <div class="Projetos">
+    <div class="projetos">
 
         <div class="projeto taxtodireta">
-            <img src="./assets/p1.jpg" alt="projeto 1">
+            <img src="./assets/p1.jpg" alt="projeto 1" class="tambprojeto">
             <ul>
                 <p>Nome:</p>
                 <strong>
@@ -42,6 +41,7 @@
         </div>
         
         <div class="projeto taxtosquerda">
+            <img src="./assets/p3.png" alt="projeto 1" class="tambprojeto">
             <ul>
                 <p>Nome:</p>
                 <strong>
@@ -50,7 +50,6 @@
                 <p>Descrição:</p>
                 <h5>"Criado pra ser uma bom acompanhante, e bem humorado ..."</h5>
             </ul>
-            <img src="./assets/p3.png" alt="projeto 1">
         </div>
 
     </div>
