--- a/html/contato.html
+++ b/html/contato.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/sla.css">
-    <link rel="stylesheet" href="/css/class.css">
+    <link rel="stylesheet" href="./css/header.css">
+    <link rel="stylesheet" href="./css/class.css">
     <title>Meu Repositório</title>
 </head>
     
@@ -16,10 +16,10 @@
         <li><a href="/">Home</a></li>
         <nav>
             <ul class="menu">
-                <li><a href="/html/produtos.html">Produtos</a></li>
-                <li><a href="/html/midia.html">Mídia</a></li>
-                <li><a href="/html/contato.html">Contatos</a></li>
-                <li><a href="/html/sobre.html">Sobre</a></li>
+                <li><a href="./html/produtos.html">Produtos</a></li>
+                <li><a href="./html/midia.html">Mídia</a></li>
+                <li><a href="./html/contato.html">Contatos</a></li>
+                <li><a href="./html/sobre.html">Sobre</a></li>
             </ul>
         </nav>
     </header>
