--- a/html/produtos.html
+++ b/html/produtos.html
@@ -13,7 +13,7 @@
 <body class="corpo">
     <h1 class="title">{ Produtos }</h1>
     <header class="cabeçalho">
-        <li><a href="/">Home</a></li>
+        <li><a href="./index.html">Home</a></li>
         <nav>
             <ul class="menu">
                 <li><a href="./html/produtos.html">Produtos</a></li>
