--- a/html/sobre.html
+++ b/html/sobre.html
@@ -15,7 +15,7 @@
 <body class="corpo">
     <h1 class="title">{ Sobre }</h1>
     <header class="cabeçalho">
-        <li><a href="/">Home</a></li>
+        <li><a href="./index.html">Home</a></li>
         <nav>
             <ul class="menu">
                 <li><a href="./html/produtos.html">Produtos</a></li>
