--- a/html/sobre.html
+++ b/html/sobre.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/header.css">
-    <link rel="stylesheet" href="./css/class.css">
+    <link rel="stylesheet" href="../css/header.css">
+    <link rel="stylesheet" href="../class.css">
     
 
     <title>Meu Repositório</title>
@@ -15,14 +15,14 @@
 <body class="corpo">
     <h1 class="title">{ Sobre }</h1>
     <header class="cabeçalho">
-        <li><a href="./index.html">Home</a></li>
+        <li><a href="../index.html">Home</a></li>
         <nav>
             <ul class="menu">
-                <li><a href="./html/produtos.html">Produtos</a></li>
-                <li><a href="./html/midia.html">Mídia</a></li>
-                <li><a href="./html/contato.html">Contatos</a></li>
-                <li><a href="./html/sobre.html">Sobre</a></li>
-            </ul>
+                <li><a href="../html/produtos.html">Produtos</a></li>
+                <li><a href="../html/midia.html">Mídia</a></li>
+                <li><a href="../html/contato.html">Contatos</a></li>
+                <li><a href="../html/sobre.html">Sobre</a></li>
+            </ul>.
         </nav>
     </header>
 
