--- a/html/sobre.html
+++ b/html/sobre.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/header.css">
-    <link rel="stylesheet" href="../class.css">
+    <link rel="stylesheet" href="../css/class.css">
     
 
     <title>Meu Repositório</title>
